# social-interno

./: .gitignore  AGENTS.md  ARCHITECTURE.md  OPEN_SOURCE_REUSE.md  README.md
backend/: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260722_0001_foundation.py  20260722_0002_invitations.py  20260722_0003_user_role_assignments.py  20260723_0004_registration_attempts.py  20260723_0005_invitation_target_identity.py  20260724_0006_registration_attempt_revocation.py
backend/src/social_internal_backend/: __init__.py  application.py  database.py  main.py  settings.py
backend/src/social_internal_backend/api/: __init__.py  admin_invitations.py  capabilities.py  dependencies.py  health.py
backend/tests/: conftest.py  test_admin_invitations_api.py  test_bootstrap_platform_admin_command.py  test_capabilities_api.py  test_database.py  test_health.py  test_invitation_identity_postgres.py  test_invitation_model.py  test_invitation_repository.py  test_invitation_service.py  test_invitation_tokens.py  test_main.py  test_matrix_identifiers.py  test_platform_admin_authorization.py  test_platform_admin_bootstrap.py  test_registration_attempt_model.py  test_registration_attempt_postgres.py  test_registration_attempt_repository.py  test_registration_unit_of_work.py  test_registration_unit_of_work_postgres.py  test_settings.py  test_synapse_admin_client.py  test_synapse_client.py  test_user_capabilities_service.py  test_user_role_assignment_model.py  test_user_role_assignment_repository.py
(+350 files in other folders)
