[project]
name = "social-interno-backend"
version = "0.1.0"
description = "Serviço auxiliar de convites e ciclo de vida de contas"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic<2",
  "fastapi<1",
  "httpx<1",
  "psycopg[binary]>=3,<4",
  "pydantic-settings<3",
  "sqlalchemy>=2,<2.1",
  "uvicorn<1",
]

[dependency-groups]
dev = [
  "mypy<2",
  "pytest<10",
  "pytest-cov<8",
  "ruff<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "S", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
strict = true
files = ["src", "tests", "migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=social_internal_backend",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
